tests/paczka1/fuzzy1/55787340.err
Error in line 1: qMP7 S441 42,3
Error in line 8: bqa0xTytDph A5 14,1
Error in line 30: uIBNHJgac S856 -5,1
Error in line 37: qMP7 S856 14,1
